# fatx

./: .gitmodules  CMakeLists.txt  Dockerfile  build_cffi.py
fatxfs/: CMakeLists.txt  fatxfs_fuse.c
gfatx/: fatxfilesystemmodel.h  main.cpp
libfatx/: CMakeLists.txt  fatx.c  fatx.h  fatx_attr.c  fatx_dir.c  fatx_disk.c  fatx_misc.c
libfatx/dev/: dev_qemu.c  dev_raw.c  fatx_dev.c  fatx_dev.h  qemu_block_backend.h
pyfatx/: __init__.py
tests/: test.py
